// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalInformation component should render correctly 1`] = `
<Fragment>
  <MyProfileTile
    ctaLink="accountOverviewMobile"
    ctaTitle="Edit personal Info"
    handleComponentChange={[Function]}
    title=""
  >
    <PersonalInformationDisplay
      airMiles="XXXXXXX"
      labels={
        Object {
          "lbl_profile_edit_mailing_info": "Edit mailing Info",
          "lbl_profile_edit_personal_info": "Edit personal Info",
          "lbl_profile_mailing_address": "Mailing Information",
          "llbl_profile_personal_information": "Personal Information",
        }
      }
      mailingAddress={Object {}}
      myPlaceNumber=""
      userBirthday="feb 2019"
      userEmail=""
      userFullName=""
      userPhoneNumber=""
    />
  </MyProfileTile>
</Fragment>
`;

exports[`PersonalInformation component should render emptyu correctly 1`] = `
<Fragment>
  <MyProfileTile
    ctaLink="accountOverviewMobile"
    ctaTitle=""
    handleComponentChange={[Function]}
    title=""
  >
    <PersonalInformationDisplay
      airMiles=""
      labels={Object {}}
      mailingAddress={Object {}}
      myPlaceNumber=""
      userBirthday=""
      userEmail=""
      userFullName=""
      userPhoneNumber=""
    />
  </MyProfileTile>
</Fragment>
`;
